A new document is added.

--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -25,6 +25,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3fd44722",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#to read excel file not csv file :\n",
+    "import pandas as pd \n",
+    "df = pd.read_excel('Book1.xlsx')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "201504ad",
    "metadata": {},
