--- a/first_class.ipynb
+++ b/first_class.ipynb
@@ -4492,13 +4492,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "379736f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
-    "#"
+    "#Decorators\n",
+    "def outer_function(fun):\n",
+    "    \n",
+    "    def inner_function():\n",
+    "        x=fun()\n",
+    "    return inner_function()\n",
+    "@outer_function\n",
+    "def hello():\n",
+    "    print('Hello World')\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5d3aa178",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def outer_function(fun):\n",
+    "    \n",
+    "    def inner_function():\n",
+    "        x=fun()\n",
+    "    return inner_function()\n",
+    "@outer_function\n",
+    "def hello():\n",
+    "    print('Hello World')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78f98990",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
