A new document is added.

--- a/json and math.ipynb
+++ b/json and math.ipynb
@@ -25,21 +25,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "af384892",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Could not find a version that satisfies the requirement json (from versions: none)\n",
-      "ERROR: No matching distribution found for json\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'{ \"name\":[\"ram\",\"shyam\",\"Hari\",\"gopal\"],\"subject\":[\"enlish\",\"Math\",\"nepali\",\"Science\"],\"address\":[\"ktm\",\"pkr\",\"npj\",\"btw\"]}'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "!pip install json"
+    "import json\n",
+    "y='{ \"name\":[\"ram\",\"shyam\",\"Hari\",\"gopal\"],\"subject\":[\"enlish\",\"Math\",\"nepali\",\"Science\"],\"address\":[\"ktm\",\"pkr\",\"npj\",\"btw\"]}'\n",
+    "dataty"
    ]
   },
   {
