--- a/itertools.ipynb
+++ b/itertools.ipynb
@@ -90,27 +90,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "edffb7a4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'permutaions' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_8476\\176952278.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mperm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpermutaions\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mperm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'permutaions' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[(1, 2, 3, 4),\n",
+       " (1, 2, 4, 3),\n",
+       " (1, 3, 2, 4),\n",
+       " (1, 3, 4, 2),\n",
+       " (1, 4, 2, 3),\n",
+       " (1, 4, 3, 2),\n",
+       " (2, 1, 3, 4),\n",
+       " (2, 1, 4, 3),\n",
+       " (2, 3, 1, 4),\n",
+       " (2, 3, 4, 1),\n",
+       " (2, 4, 1, 3),\n",
+       " (2, 4, 3, 1),\n",
+       " (3, 1, 2, 4),\n",
+       " (3, 1, 4, 2),\n",
+       " (3, 2, 1, 4),\n",
+       " (3, 2, 4, 1),\n",
+       " (3, 4, 1, 2),\n",
+       " (3, 4, 2, 1),\n",
+       " (4, 1, 2, 3),\n",
+       " (4, 1, 3, 2),\n",
+       " (4, 2, 1, 3),\n",
+       " (4, 2, 3, 1),\n",
+       " (4, 3, 1, 2),\n",
+       " (4, 3, 2, 1)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from itertools import permutations\n",
     "\n",
     "a=[1,2,3,4]\n",
-    "perm = permutaions(a,1)\n",
+    "perm = permutations(a)\n",
     "list(perm)"
    ]
   },
