--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "f463438d",
    "metadata": {},
    "outputs": [
@@ -526,17 +526,26 @@
        "       [ 1,  4,  9, 16, 25]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import numpy as np\n",
     "a = np.array([1,2,3,4,5])\n",
     "b = np.array([1,4,9,16,25])\n",
     "c=np.vstack((a,b))\n",
     "c\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25a385d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
